--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -20,8 +20,10 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 78vh;
-    gap: 5rem;
+    padding: 2rem;
+}
+#grafo {
+    padding: 10rem;
 }
 .encabezado {
     padding: 1rem;
@@ -41,6 +43,9 @@ nav ul {
 a {
     text-decoration: none;
     font-size: 18px;
+}
+.menu-option {
+    cursor: pointer;
 }
 h3 {
     font-size: 22px;
@@ -115,4 +120,45 @@ h3 {
 }   
 .button:active, #comenzar:active {
     background-color: var(--primary-color);
+}
+#dialog-section {
+
+}
+
+#modal {
+    padding: 2rem;
+    border: 1px solid  var(--secondary-color);
+    border-radius: 10px;
+    top: 20%;
+    left: 30%;
+    right: 30%;
+    bottom: 30%;
+    width: 50rem;
+}
+#form-header {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 1rem;
+}
+.form fieldset {
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+}
+.input {
+    padding: .5rem;
+    border-radius: 5px;
+    width: 80%;
+}
+#listado {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
+}
+#listado .card {
+    width: 50%;
 }
